tests/semantic_cases/invalid/readint_statement_call.ob0
MODULE Main;
BEGIN
  ReadInt()
END Main.
